# glomerate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
benchmarks/: CMakeLists.txt
benchmarks/src/common/: Time.cc  Time.hh
benchmarks/src/entityx/: Benchmark.cc
benchmarks/src/glomerate/: Benchmark.cc
include/: Common.hh  Ecs.hh
include/ecs/: Common.hh  CommonImpl.hh  ComponentManager.hh  ComponentManagerImpl.hh  ComponentStorage.hh  ComponentStorageImpl.hh  Entity.hh  EntityDestroyed.hh  EntityDestruction.hh  EntityImpl.hh  EntityManager.hh  EntityManagerImpl.hh  Handle.hh  HandleImpl.hh  Subscription.hh  SubscriptionImpl.hh
src/: Common.cc
src/ecs/: Common.cc  ComponentManager.cc  ComponentStorage.cc  ComponentStorage.hh  Ecs.hh  Entity.cc  Entity.hh  EntityImpl.hh  EntityManager.cc  EntityManager.hh  Handle.hh
tests/: CMakeLists.txt
tests/integration/: Ecs.cc  Events.cc  ecs.cc
tests/unit/: Ecs.cc
